samples/_failures_safe/1761357917_f52b10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5df6fe83.c: In function ‘main’:
./samples/SAFE/__tmp_5df6fe83.c:147:12: error: expected declaration or statement at end of input
  147 |     struct LogAnalyzer analyzer;
      |            ^~~~~~~~~~~
